--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <a href="#home">Home</a>
                 </li>
                 <li>
-                    <a href="#about">About</a>
+                    <a href="#about">Par mums</a>
                 </li>
                 <li>
                     <a href="#why_choose_us">why Choose Us</a>
